[package]
name = "scrypto_math"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Math library extending Radix Scrypto with more advanced mathematical operations"
repository = "https://github.com/ociswap/scrypto-math"

[dependencies]
radix-rust = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "927f72e7815a7e46fb1e9ef665f5a5c03700a3ca" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "927f72e7815a7e46fb1e9ef665f5a5c03700a3ca" }
radix-common-derive = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "927f72e7815a7e46fb1e9ef665f5a5c03700a3ca" }
num-traits = "0.2.15"
pretty_assertions = "1.4.0"
